# yt-download-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.env.example  devcontainer.json  docker-compose.yml  init.sh
alembic/: env.py
alembic/versions/: 90902160bb77_create_user_and_history_tables.py  ecdad15af032_add_user_and_history_tables.py
src/yt_download_service/: env.py  main.py
src/yt_download_service/app/controllers/: auth_controller.py  history_controller.py  video_controller.py
src/yt_download_service/app/domain/: schemas.py
src/yt_download_service/app/interfaces/: history_repository.py  history_service.py  user_repository.py  user_service.py
src/yt_download_service/app/use_cases/: auth_service.py  history_service.py  video_service.py
src/yt_download_service/app/utils/: dependencies.py  env.py  file_utils.py  google_sso.py  jwt_handler.py  video_utils.py
src/yt_download_service/domain/models/: auth.py  history.py  user.py
src/yt_download_service/domain/models/commons/: base_models.py  enums.py
src/yt_download_service/infrastructure/database/: env.py  models.py  path.py  session.py
src/yt_download_service/infrastructure/repositories/: history_repository.py  user_repository.py
src/yt_download_service/infrastructure/services/: history_service.py  user_service.py
